<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#96A550"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".activity.RegistrationActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D8D8D8"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_stacked_blue"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>


        <EditText
                android:id="@+id/username"
                style="@style/login"
                android:hint="@string/username"
                android:inputType="text" />

        <EditText
                android:id="@+id/password"
                style="@style/login"
                android:hint="@string/password"
                android:inputType="textPassword" />

        <CheckBox
                android:id="@+id/landowner"
                style="@style/login"
                android:text="@string/land_owner"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent" />

        <Button
                android:id="@+id/btn_sign_up"
                style="@style/login"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>